--- a/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
+++ b/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
@@ -33,9 +33,11 @@
 
 
 .mat-card-image{
-  width: auto;
+  width: 182px;
+  height: 268px;
   margin: auto;
   display: block;
+
 }
 
 @media screen and (min-width: 1300px) {
